--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-
   #app icon
   flutter_launcher_icons: ^0.9.2
+
+  build_runner:
+  flutter_gen_runner:
+
+flutter_gen:
+  output: lib/shared/assets/
+  line_length: 120
+  integrations:
+    flutter_svg: true
 
 flutter_icons:
   android: "launcher_icon"
@@ -37,14 +45,7 @@ flutter:
     - assets/images/
     - assets/icons/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/font/Roboto-Regular.ttf
