--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,24 @@ dependencies:
 
   # State management 
   flutter_bloc: ^8.0.1
-  conditional_builder_null_safety: ^0.0.6
+  equatable: ^2.0.5
+
+  #Dependency Injection
+  get_it: ^7.2.0
+
+  #Functional Programming
+  dartz: ^0.10.1
 
   #UI
   flutter_svg: ^1.1.3
   badges: ^2.0.3
   intl: ^0.17.0
   table_calendar: ^3.0.6
+  flutter_screenutil: ^5.5.3+2
+  form_builder_validators: ^8.1.1
+
+  #Localization
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   flutter_test:
