--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/lang/
+    - assets/font/
 
   fonts:
     - family: Roboto
