--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   #Dependency Injection
   get_it: ^7.2.0
 
+  internet_connection_checker: ^0.0.1+4
+
   #Functional Programming
   dartz: ^0.10.1
 
